[CL-1957] Pass hash to json.erb fixture using result_with_hash

--- a/back/spec/fixtures/craftjs_layout_with_2_images.json.erb
+++ b/back/spec/fixtures/craftjs_layout_with_2_images.json.erb
@@ -110,7 +110,7 @@
       "nodes": [],
       "props": {
         "alt": "",
-        "dataCode": "<%= image_codes[:code1] %>"
+        "dataCode": "<%= code1 %>"
       },
       "custom": {
         "title": {
@@ -170,7 +170,7 @@
       "nodes": [],
       "props": {
         "alt": "",
-        "dataCode": "<%= image_codes[:code2] %>"
+        "dataCode": "<%= code2 %>"
       },
       "custom": {
         "title": {
