--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -1337,7 +1337,7 @@
       "homepage_builder": {
         "type": "object",
         "title": "Homepage builder",
-        "description": "Use the new homepage builder. Do not turn this on/off if you're not sure what you're doing.",
+        "description": "TODO: delete. Use the new homepage builder. Do not turn this on/off if you're not sure what you're doing.",
         "additionalProperties": false,
         "required": ["allowed", "enabled"],
         "properties": {
