Add feature flag

--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -1344,7 +1344,19 @@
           "allowed": { "type": "boolean", "default": true },
           "enabled": { "type": "boolean", "default": true }
         }
-      }
+      },
+
+      "user_session_recording": {
+        "type": "object",
+        "title": "User session recording",
+        "description": "Enables the recording of user sessions for analysis and product research purposes.",
+        "additionalProperties": false,
+        "required": ["allowed", "enabled"],
+        "properties": {
+          "allowed": { "type": "boolean", "default": false },
+          "enabled": { "type": "boolean", "default": false }
+        }
+      },
     },
   "dependencies": {
     "planhat": ["segment"],
