[TAN-893] Set default: false in settings.schema.json.erb

--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -503,7 +503,7 @@
           },
           "esri_integration": {
             "type": "boolean",
-            "default": true,
+            "default": false,
             "title": "Esri Integration",
             "description": "Enable Esri integration for maps. In development. DO NOT ENABLE ON COMMERCIAL PLATFORM!"
           }
