[TAN-895] Use private: true for api_key setting

--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -511,7 +511,8 @@
               "api_key": {
                 "title": "API Key",
                 "description": "The API key for the Esri integration. (TODO: add more useful information)",
-                "type": "string"
+                "type": "string",
+                "private": true
               }
             }
           }
