[TAN-893] add required colon

--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -504,7 +504,7 @@
         }
       },
 
-      "esri_integration" {
+      "esri_integration": {
         "type": "object",
         "title": "Esri Integration",
         "description":  "Esri integration for maps. In development. DO NOT ENABLE ON COMMERCIAL PLATFORM!",
