[TAN-893] Remove default placeholder value

--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -516,8 +516,7 @@
           "api_key": {
             "title": "API Key",
             "description": "The API key for the Esri integration. (TODO: add more useful information)",
-            "type": "string",
-            "default": "fake-placeholder-api-key"
+            "type": "string"
           }
         }
       },
