--- a/back/engines/free/email_campaigns/app/views/email_campaigns/official_feedbacks/_card.mjml
+++ b/back/engines/free/email_campaigns/app/views/email_campaigns/official_feedbacks/_card.mjml
@@ -8,7 +8,7 @@
         <%= localize_for_recipient(event.post_title_multiloc) %>
       </h2>
       <p style="margin-top: 10px; color: #84939E;">
-        <%= localize_for_recipient(event.post_body_multiloc) %>
+        <%= localize_for_recipient(event['post_body_multiloc']) %>
       </p>
       <p style="margin-top: 10px; color: #84939E;">
         <%= format_message('by_author', component: 'general', values: { authorName: event.post_author_name }) %>
