--- a/back/engines/free/email_campaigns/app/views/email_campaigns/posts/_post_with_image.mjml
+++ b/back/engines/free/email_campaigns/app/views/email_campaigns/posts/_post_with_image.mjml
@@ -18,8 +18,8 @@
       <p style="margin-top: 10px; color: #84939E;">
         <%= localize_for_recipient(post_body_multiloc)&.html_safe %>
       </p>
-      <% if event.post_author_name %>
-        <p style="color:#8D8D8D;"><%= "by #{event.post_author_name}" %></p>
+      <% if event['post_author_name'] %>
+        <p style="color:#8D8D8D;"><%= "by #{event['post_author_name']}" %></p>
       <% end %>
     </mj-text>
   </mj-column>
