--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -519,7 +519,7 @@
       "esri_integration": {
         "type": "object",
         "title": "Esri Integration",
-        "description":  "Esri integration for maps. In development. DO NOT ENABLE ON COMMERCIAL PLATFORM!",
+        "description":  "In development. DO NOT ENABLE ON COMMERCIAL PLATFORM! Esri integration for maps. An add-on that can be purchased, and is not restricted to specific pricing plan(s).",
         "additionalProperties": false,
         "required": ["allowed", "enabled"],
         "properties": {
@@ -527,7 +527,7 @@
           "enabled": { "type": "boolean", "default": false},
           "api_key": {
             "title": "API Key",
-            "description": "The API key for the Esri integration. (TODO: add more useful information)",
+            "description": "Add customer’s Esri API key to allow importing map layers from their ArcGIS Online in the map tabs in projects. This setting is also available to admins in the Tools: Esri Maps item.",
             "type": "string"
           }
         }
