[TAN-974] Add default settings to localhost seed data

--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -1240,8 +1240,8 @@
 
       "native_surveys_mapping_question": {
         "type": "object",
-        "title": "Allow mapping_questions in in-platform surveys. Currently limited to one type: Select a point on a map.",
-        "description":  "",
+        "title": "Mapping question in in-platform surveys",
+        "description":  "Allow mapping question(s) in in-platform surveys. Currently limited to one type: Select a point on a map.",
         "additionalProperties": false,
         "required": ["allowed", "enabled"],
         "properties": {
