--- a/back/engines/free/email_campaigns/app/views/email_campaigns/native_survey_not_submitted_mailer/campaign_mail.mjml
+++ b/back/engines/free/email_campaigns/app/views/email_campaigns/native_survey_not_submitted_mailer/campaign_mail.mjml
@@ -1,9 +1,2 @@
 <!-- CTA button -->
-<mj-section padding="0 25px">
-  <mj-column>
-    <mj-text>
-      <p><%= format_message('cta_message') %></p>
-    </mj-text>
-  </mj-column>
-</mj-section>
-<%= render partial: 'application/cta_button', locals: { href: event.project_url, message: format_message('cta_complete_your_survey_response') } %>
+<%= render partial: 'application/cta_button', locals: { href: event.survey_url, message: format_message('cta_complete_your_survey_response') } %>
