[TAN-974] Tweak settings title and description

--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -1240,8 +1240,8 @@
 
       "input_form_mapping_question": {
         "type": "object",
-        "title": "Mapping question in in-platform surveys",
-        "description":  "Allow mapping question(s) in in-platform surveys. Currently limited to one type: Select a point on a map.",
+        "title": "Mapping question used in in-platform surveys",
+        "description":  "Allow mapping question(s) for use in in-platform surveys. Currently limited to one type: Select a point on a map.",
         "additionalProperties": false,
         "required": ["allowed", "enabled"],
         "properties": {
