Rename feature to make its purpose clearer

--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -1382,9 +1382,9 @@
         }
       },
 
-      "extensive_logging": {
+      "dev_extensive_logging": {
         "type": "object",
-        "title": "Extensive logging",
+        "title": "Extensive logging for devs",
         "description": "Enables extensive logging for debugging purposes. Check how the feature is used before enabling it.",
         "additionalProperties": false,
         "required": ["allowed", "enabled"],
