--- a/back/app/views/application/_head.mjml
+++ b/back/app/views/application/_head.mjml
@@ -15,4 +15,7 @@
   <mj-attributes>
     <mj-all padding="0" font-family="Arial" font-size="15px" line-height="150%" color="black" />
   </mj-attributes>
+  <mj-preview>
+    <%= preheader %>
+  </mj-preview>
 </mj-head>
