--- a/back/app/views/application/_head.mjml
+++ b/back/app/views/application/_head.mjml
@@ -18,7 +18,7 @@
 
   <% unless preheader.empty? %>
     <mj-preview>
-      <%= preheader %>
+      <%= preheader + ' __________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________'%>
     </mj-preview>
   <% end %>
 </mj-head>
