--- a/back/engines/free/email_campaigns/app/views/email_campaigns/application/_head.mjml
+++ b/back/engines/free/email_campaigns/app/views/email_campaigns/application/_head.mjml
@@ -30,7 +30,7 @@
 
   <% unless preheader.empty? %>
     <mj-preview>
-      <%= preheader %>
+      <%= preheader + ' __________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________'%>
     </mj-preview>
   <% end %>
 </mj-head>
