--- a/back/app/views/application/_head.mjml
+++ b/back/app/views/application/_head.mjml
@@ -16,9 +16,10 @@
     <mj-all padding="0" font-family="Arial" font-size="15px" line-height="150%" color="black" />
   </mj-attributes>
 
+  <!-- We add underscores to pad the text displayed in the preview so that the body text (uincluding the logo alt text) is not visible -->
   <% unless preheader.empty? %>
     <mj-preview>
-      <%= preheader + ' __________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________'%>
+      <%= preheader + ' _____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________'%>
     </mj-preview>
   <% end %>
 </mj-head>
