--- a/back/engines/free/email_campaigns/app/views/email_campaigns/application/_head.mjml
+++ b/back/engines/free/email_campaigns/app/views/email_campaigns/application/_head.mjml
@@ -31,7 +31,7 @@
   <%#  We add underscores to pad the text displayed in the preview so that the body text (including the logo alt text) is not visible %>
   <% unless preheader.empty? %>
     <mj-preview>
-      <%= preheader + ' _________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________'%>
+      <%= preheader + ' - '%>
     </mj-preview>
   <% end %>
 </mj-head>
