[TAN-2664] Added customer portal link to admin > support

--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -219,6 +219,12 @@
             "title": "Additional number of manager seats",
             "description": "Number of project and folder manager seats bought additionally over the contract limit.",
             "type": ["integer", "null"]
+          },
+          "customer_portal_url": {
+            "title": "Customer portal URL",
+            "description": "Link to the customer portal in Planhat.",
+            "type": "string",
+            "format": "uri"
           }
         }
       },
