--- a/back/config/schemas/settings.schema.json.erb
+++ b/back/config/schemas/settings.schema.json.erb
@@ -159,6 +159,12 @@
             "type": "boolean",
             "default": false
           },
+          "allow_sharing":  {
+            "title": "Sharing content on socials",
+            "description": "Allow users to share content via social media or email.",
+            "type": "boolean",
+            "default": true
+          },
           "areas_term": {
             "title": "Geographic Units",
             "description": "What a geographic unit should be called on this platform (e.g., neighbourhoods, districts, etc.). Input the plural form here with all lowercase letters. If left blank, this field defaults to 'areas'.",
